# tree-sitter-po

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  release.yml
bindings/c/: tree-sitter-gettext.pc.in  tree-sitter-po.pc.in
bindings/c/tree_sitter/: tree-sitter-gettext.h  tree-sitter-po.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gettext/: __init__.py
bindings/python/tree_sitter_po/: binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGettextTests/: TreeSitterGettextTests.swift
bindings/swift/TreeSitterPoTests/: TreeSitterPoTests.swift
examples/: sample.po
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  header.txt  messages.txt  obsolete.txt
